Control Points added to a mask already parented to a track don't follow the parent. #48282

Closed
opened 2016-04-26 23:32:30 +02:00 by John Cox · 4 comments

System Information
OS X 10.9.5 (13F1066)
Intel Iris Pro 1024 MB

Blender Version
Broken: 2.77a
Worked: N/A

Short description of error
If a Mask is parented to a Track in the Movie Clip Editor, the original control points follow the track but if new control points are added to the Mask, they don't follow the parent Track.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Download the .blend and the .mov to the same folder. There are two Masks. RedMask was parented to RedTrack and then extra control points were added which don't follow the track. Switch to the GreenMask. The control points were added to the mask before it was parented to the GreenTrack and they follow.

MaskParentBug.blend

track.mov

**System Information** OS X 10.9.5 (13F1066) Intel Iris Pro 1024 MB **Blender Version** Broken: 2.77a Worked: N/A **Short description of error** If a Mask is parented to a Track in the Movie Clip Editor, the original control points follow the track but if new control points are added to the Mask, they don't follow the parent Track. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Download the .blend and the .mov to the same folder. There are two Masks. RedMask was parented to RedTrack and then extra control points were added which don't follow the track. Switch to the GreenMask. The control points were added to the mask *before* it was parented to the GreenTrack and they follow. [MaskParentBug.blend](https://archive.blender.org/developer/F307227/MaskParentBug.blend) [track.mov](https://archive.blender.org/developer/F307228/track.mov)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnCox

Added subscriber: @JohnCox

This issue was referenced by 6483b9cb07

This issue was referenced by 6483b9cb076b2988732dc19e354092ccbd653f72

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48282
No description provided.