Fix T48282: Newly added mask points don't follow parent